Assignments/HW04/experiment_921666.err
task3.cpp: In function ‘int main(int, char**)’:
task3.cpp:111:13: error: ‘vel’ was not declared in this scope
  111 |             vel[i][0] += acc[i][0] * dt / 2.0;
      |             ^~~
task3.cpp:111:26: error: ‘acc’ was not declared in this scope
  111 |             vel[i][0] += acc[i][0] * dt / 2.0;
      |                          ^~~
task3.cpp:118:13: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
  118 |             pos[i][0] += vel[i][0] * dt;
      |             ^~~
      |             pow
task3.cpp:118:26: error: ‘vel’ was not declared in this scope
  118 |             pos[i][0] += vel[i][0] * dt;
      |                          ^~~
task3.cpp:126:21: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
  126 |                 if (pos[i][dim] > board_size) pos[i][dim] = board_size;
      |                     ^~~
      |                     pow
task3.cpp:131:16: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
  131 |         getAcc(pos, mass, acc, N, schedule);
      |                ^~~
      |                pow
task3.cpp:131:21: error: ‘mass’ was not declared in this scope
  131 |         getAcc(pos, mass, acc, N, schedule);
      |                     ^~~~
task3.cpp:131:27: error: ‘acc’ was not declared in this scope
  131 |         getAcc(pos, mass, acc, N, schedule);
      |                           ^~~
task3.cpp:135:13: error: ‘vel’ was not declared in this scope
  135 |             vel[i][0] += acc[i][0] * dt / 2.0;
      |             ^~~
task3.cpp:142:14: error: ‘mass’ was not declared in this scope
  142 |     delete[] mass;
      |              ^~~~
task3.cpp:143:14: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
  143 |     delete[] pos;
      |              ^~~
      |              pow
task3.cpp:144:14: error: ‘vel’ was not declared in this scope
  144 |     delete[] vel;
      |              ^~~
task3.cpp:145:14: error: ‘acc’ was not declared in this scope
  145 |     delete[] acc;
      |              ^~~
task3.cpp:147:5: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  147 |     end = high_resolution_clock::now();
      |     ^~~
      |     std::end
In file included from /usr/include/c++/14/string:53,
                 from /usr/include/c++/14/bits/locale_classes.h:40,
                 from /usr/include/c++/14/bits/ios_base.h:41,
                 from /usr/include/c++/14/ios:44,
                 from /usr/include/c++/14/ostream:40,
                 from /usr/include/c++/14/iostream:41,
                 from task3.cpp:2:
/usr/include/c++/14/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
task3.cpp:148:5: error: ‘duration_sec’ was not declared in this scope; did you mean ‘duration’?
  148 |     duration_sec = std::chrono::duration_cast<duration<double, std::milli>>(end - start);
      |     ^~~~~~~~~~~~
      |     duration
task3.cpp:148:83: error: ‘start’ was not declared in this scope
  148 |     duration_sec = std::chrono::duration_cast<duration<double, std::milli>>(end - start);
      |                                                                                   ^~~~~
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
Usage: ./task3 <number_of_particles> <simulation_end_time> <num_threads>
